# engine

./: .clang-format  .gitignore  CMakeLists.txt
shaders/: basic.slang  highlight.slang  phong.slang
src/: app.cpp  app.hpp  asset_manager.cpp  asset_manager.hpp  core.hpp  impl.cpp  main.cpp  renderer.cpp  renderer.hpp
src/renderer/: render_pass.hpp  renderer.cpp  renderer.hpp  vulkan_primitives.hpp
